# icometrix-sdk

./: Jenkinsfile  LICENSE  README.rst  catalog-info.yaml  gh-version.sh  pyproject.toml  requirements.txt
.github/workflows/: gh-pages-docs.yml  python-publish.yml
docs/: conf.py  index.rst  quickstart.rst  requirements.txt
docs/developer_guide/: anonymization.rst  data_processing_flow.rst  data_validation.rst  index.rst  model_relations.mmd  models.rst  paginators.rst  session.rst  upload.rst
docs/models/: anonymizer.rst  base.rst  customer_report.rst  customer_result.rst  index.rst  patient.rst  project.rst  series.rst  study.rst  upload.rst  user.rst
docs/resources/: customer_results.rst  index.rst  profile.rst  series.rst  studies.rst
docs/source/: quickstart.rst
examples/: anonymize.py  anonymized_upload_files.py  custom_session.py  data_validation_post_import.py  data_validation_pre_import.py  get_all_projects.py  get_customer_reports.py  get_customer_results.py  quickstart.py  sync_directory.py  upload_and_download.py  upload_directory.py  upload_files.py
examples/authentication/: auto_auth.py  custom_auth.py  password_auth.py
icometrix_sdk/: __init__.py  authentication.py  exceptions.py  logger.py
icometrix_sdk/anonymizer/: anonymizer.py  config.py  constants.py  exceptions.py  hash_factory.py  models.py  policy.py  utils.py
icometrix_sdk/models/: base.py  customer_report_entity.py  customer_result_entity.py  job_entity.py  patient_entity.py  pipeline_result_entity.py  project_entity.py  series_entity.py  study_entity.py  upload_entity.py  (+1 more)
(+37 files in other folders)
