[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icometrix-SDK"
description = "icometrix-SDK is a Software Development Kit (SDK) for Python, which allows Python developers to write software that interacts with the icometrix API."
authors = [
    { name = "Jeroen Pinxten", email = "jeroen.pinxten@icometrix.com" },
]
readme = "README.rst"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/icometrix/icometrix-sdk"
Issues = "https://github.com/icometrix/icometrix-sdk/issues"

[tool.hatch.version]
path = "icometrix_sdk/_version.py"